...
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="LeU-89-oxY" secondAttribute="trailing" id="6RP-5e-hyk"/>
                            <constraint firstItem="LeU-89-oxY" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="LuN-Yp-dar"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="LeU-89-oxY" secondAttribute="bottom" id="Y4t-Lg-zrO"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                    </view>
                    <navigationItem key="navigationItem" title="Contacts" id="sEe-6d-Zb2">
                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="u5h-vc-6mo">
                            <connections>
                                <segue destination="4II-g4-NLE" kind="popoverPresentation" popoverAnchorBarButtonItem="u5h-vc-6mo" id="1pl-hY-cCC">
                                    <popoverArrowDirection key="popoverArrowDirection" up="YES" down="YES" left="YES" right="YES"/>
                                </segue>
                            </connections>
...
                                <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="44" id="b8S-0K-yhZ"/>
                                </constraints>
                                <color key="barTintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <items>
                                    <navigationItem title="New Contact" id="ubM-0w-9l3">
                                        <barButtonItem key="leftBarButtonItem" title="Cancel" id="AeX-lZ-J38">
                                            <connections>
                                                <action selector="onClickDismiss:" destination="4II-g4-NLE" id="51Q-oI-GNM"/>
                                            </connections>
                                        </barButtonItem>
                                        <barButtonItem key="rightBarButtonItem" title="Done" id="sQC-0c-jel">
                                            <connections>
                                                <action selector="onClickSave:" destination="4II-g4-NLE" id="kWe-tp-tRE"/>
                                            </connections>
                                        </barButtonItem>
                                    </navigationItem>
                                </items>
...
