...
        }
        .navigationBarTitle(data.name ?? "???")
        .navigationBarItems(trailing:
            Button(action: {
                self.showEditContactView.toggle()
            }, label : {
                Text("Edit")
            }).sheet(isPresented: $showEditContactView) {
                UpdateContactView(
                    userContact: self.data,
                    isPresented: self.$showEditContactView,
                    userName: self.data.name ?? "",
                    phoneNumberStates: (self.data.phone_numbers?.allObjects.map({ (item) -> PhoneNumberVO? in
...
